--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ oauth2client==4.1.3
 sklearn
 auto-sklearn==0.9.0
 arff==0.9
+kaleido
 # Required for auto-sklearn, see https://github.com/automl/auto-sklearn/issues/848
 pandas<1.0
