--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,11 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+# Truffle
+cross-model/truffle/node_modules
+cross-model/truffle/package-lock.json
+cross-model/truffle/build
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
