--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 cadCAD==0.4.23
+#https://github.com/danlessa/cadCAD/archive/danlessa_devel.zip
 matplotlib==3.3.0
 jupyterlab==2.2.0
 seaborn==0.10.1
@@ -12,7 +13,11 @@ gspread==3.6.0
 oauth2client==4.1.3
 sklearn
 auto-sklearn==0.9.0
+smac==0.12.3
 arff==0.9
 kaleido
 # Required for auto-sklearn, see https://github.com/automl/auto-sklearn/issues/848
-pandas<1.0
+#pandas<1.0
+jupytext==1.6.0
+papermill==2.2.0
+fastparquet==0.4.1
