WIP: CDP debt market model (#25)
* Checkpoint: pre individual CDPs

* Checkpoint: CDP tracking, exogenous historical data for ETH, v1, u1

* Checkpoint: all mechanisms implemented

* Pre model creation

* Create v2 model

* WIP v2 model

* Consolidate states

* Update model

* WIP: APT integration

* WIP: APT integration

* Pre optimal value integration

* Update naming conventions

* Checkpoint

* Checkpoint: APT integration

* Checkpoint: APT integration

* Checkpoint: APT integration

* Checkpoint: APT integration

* Checkpoint: APT integration

* WIP: APT integration

* Pre ML model integration

* WIP: ML model integration

* WIP: ML model integration

* WIP: ML model integration

* WIP: ML model integration

* Pre state refactor

* Negative x_star

* ML model update

* Pre desktop run

* Assert without fail

* Clear outputs

* Fix CDP open bool

* Update model PSUBs w/ rebalancing

* Fix CDP open

* Update w_2

* Add debt market model tests

* Update README

* Update PSUBs and logging

* Update notebook

* Add logs folder

* Update assert_print to assert_log

* Refactor rebalance logic

* Refactor rebalance logic

* Save simulation to folder with params and state

* Disable test

* Patch scipy

* Refactor optimize callback method

* Refactor optimize callback method

* Refactor CDP creation logic

* Refactor CDP creation logic

* Refactor CDP creation logic

* Add simulations/ and execution process

* WIP: u_2 refactor

* WIP: u_2 refactor

* Refactor PSUBs

* Refactor PSUBs

* Update notebook template

* Update notebook execution

* Update notebook execution

* Update notebook analysis with stats

* Simulation updates

* Update execution

* Keep substeps

* Update tests

* Clean-up notebooks

* Update requirements.txt

* Update requirements.txt

* Refactor CDP distribution

* Update simulation execution

* Refactor CDP distrib

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+#lib/
 lib64/
 sdist/
 var/
@@ -148,3 +148,9 @@ scratchpad*
 data/.ipynb_checkpoints
 .ipynb_checkpoints/notebook-checkpoint.ipynb
 .ipynb_checkpoints
+
+models/pickles/*.pickle
+models/apt_model/*.pickle
+
+**/results*/
+**/simulation_results/
