--- a/cross-model/truffle/package.json
+++ b/cross-model/truffle/package.json
@@ -1,21 +1,19 @@
 {
   "name": "geb-rrfm-truffle-sims",
   "version": "1.0.0",
-  "description": "Truffle tests that simulate oracle prices and ping on-chain PID validators",
+  "description": "Truffle tests that simulate oracle prices and ping on-chain PID calculators",
   "main": "truffle-config.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "setup-network": "npm install && ganache-cli -d -e 100000000000",
+    "test-all": "truffle test",
     "install-deps": "npm install",
-    "setup-network": "npx ganache-cli -d -e 100000000000",
-    "test-all": "npx truffle test",
-    "pi-raw-second": "npx truffle test test/pi-raw-second.js",
-    "pi-raw-global-imported-config": "npx truffle test test/pi_raw_global_imported_config.js",
-    "pi-raw-second-imported-config": "npx truffle test test/pi_raw_second_imported_config.js",
-    "pi-scaled-second-imported-config": "npx truffle test test/pi_scaled_second_imported_config.js",
-    "pi-scaled-global-imported-config": "npx truffle test test/pi_scaled_global_imported_config.js",
-    "both-imported-config-sims": "npx truffle test test/pi_raw_validator_imported_config.js && truffle test test/pi_scaled_validator_imported_config.js"
+    "pi-raw-second-imported-config": "truffle test test/pi_raw_second_imported_config.js",
+    "pi-scaled-second-imported-config": "truffle test test/pi_scaled_second_imported_config.js",
+    "pi-scaled-imported-config": "truffle test test/pi_scaled_calculator_imported_config.js",
+    "both-imported-config-sims": "truffle test test/pi_raw_calculator_imported_config.js && truffle test test/pi_scaled_calculator_imported_config.js"
   },
   "keywords": [
     "GEB",
