Solidity/cadCAD Notebook Updates

--- a/cross-model/truffle/package.json
+++ b/cross-model/truffle/package.json
@@ -7,13 +7,13 @@
     "test": "test"
   },
   "scripts": {
-    "setup-network": "npm install && ganache-cli -d -e 100000000000",
-    "test-all": "truffle test",
+    "setup-network": "npm install && npx ganache-cli -d -e 100000000000",
+    "test-all": "npx truffle test",
     "install-deps": "npm install",
-    "pi-raw-second-imported-config": "truffle test test/pi_raw_second_imported_config.js",
-    "pi-scaled-second-imported-config": "truffle test test/pi_scaled_second_imported_config.js",
-    "pi-scaled-imported-config": "truffle test test/pi_scaled_calculator_imported_config.js",
-    "both-imported-config-sims": "truffle test test/pi_raw_calculator_imported_config.js && truffle test test/pi_scaled_calculator_imported_config.js"
+    "pi-raw-second-imported-config": "npx truffle test test/pi_raw_second_imported_config.js",
+    "pi-scaled-second-imported-config": "npx truffle test test/pi_scaled_second_imported_config.js",
+    "pi-scaled-imported-config": "npx truffle test test/pi_scaled_calculator_imported_config.js",
+    "both-imported-config-sims": "npx truffle test test/pi_raw_calculator_imported_config.js && npx truffle test test/pi_scaled_calculator_imported_config.js"
   },
   "keywords": [
     "GEB",
