--- a/requirements.txt
+++ b/requirements.txt
@@ -147,6 +147,8 @@ scikit-optimize==0.8.1
 emcee==3.0.2
 pyDOE==0.3.8
 
+vyper==0.2.8
+
 pytest==6.1.2
 #git+git://github.com/BlockScience/scipy@patch-optimize # Forked off scipy==1.5.2
 
