System model v3 & experiment workflow
* Add v3 directories and notebooks

* Add TODOs

* Update v2 to v3

* Clean-up v3 state

* WIP v3; debugging

* Post work-session w/ Jamsheed

* Update arb. Uniswap fee calc.

* Reflexer UniswapConsecutiveSlotsPriceFeedMedianizer implementation

* Remove unused Uniswap code

* Add Uniswap v1 spec

* Update Uniswap docs

* Update Uniswap docs

* Remove print statements

* Update controller to use TWAP

* Add controller governance & update initial conditions

* Remove print statements

* Update initial CDP liquidity state

* Pegged stability

* Model and initial state update

* Pre-workflow discussion

* Add ETH_1H dataset

* Implement variable control period & clean-up state

* Add experiment workflow

* Add experiment workflow

* Deepcopy Oracle

* Update params

* Update experiment

* Add liquidity demand

* Performance improvements

* Performance improvements

* Various updates

* Update reqs

* Update ETH price process

* Performance improvements

* Update experiment

* Update arb. conditions

* Update model liquidity demand shocks

* Update requirements.txt

* Update process

* Update experiment workflow

* Model updates

* Update experiments process

* Update assertions

* Update experiments process

* Add shock experiment

* Update experiment README

* Update experiment README

* Update experiment process

* Experiment complete

* Shock experiment ready

* Experiment complete

* Experiment 2021-02-09T11:59:26.345803 complete

* Create MC experiment

* Experiment complete

* Experiment experiment_liquidation_ratio complete

* Update experiments

* MC experiment

* Remote MC

* Remote MC experiment

* Remote MC experiment

* Update MC experiment

* Add KPI notebooks

* Notebooks post-presentation

* Update experiments

* Clean up experiments

* Update notebooks

Co-authored-by: BenSchZA <ben@bit

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ models/apt_model/*.pickle
 
 **/results*/
 **/simulation_results/
+exports/system_model_*/*.pickle
+*.hdf5
+experiments/**/*.pickle
