--- a/requirements.txt
+++ b/requirements.txt
@@ -151,8 +151,8 @@ tables==3.6.1
 
 # git+git://github.com/BlockScience/scipy@patch-optimize # Forked off scipy==1.5.2, see patch notes in README
 
-cadCAD==0.4.23
-# git+git://github.com/danlessa/cadCAD@danlessa_devel # No deepcopy version of cadCAD for improved performance
+cadCAD_tools
+cadCAD_tweaked==0.4.23
 cadcad_machine_search==0.0.1.2
 radcad==0.5.6 # Alternative cadCAD engine with parallel processing
 ipython-autotime
