--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,6 @@ models/apt_model/*.pickle
 exports/system_model_*/*.pickle
 *.hdf5
 experiments/**/*.pickle
+notebooks/analysis/saved_results/*.pickle
+notebooks/analysis/saved_results/*.hdf5
+
