--- a/.github/workflows/weekly.yaml
+++ b/.github/workflows/weekly.yaml
@@ -6,5 +6,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '>=3.9'
       - run: python -m pip install -r requirements.txt
       - run: python -m rai_digital_twin
