--- a/.github/workflows/weekly.yaml
+++ b/.github/workflows/weekly.yaml
@@ -10,3 +10,9 @@ jobs:
           python-version: '>=3.9'
       - run: python -m pip install -r requirements.txt
       - run: python -m rai_digital_twin
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./reports
