--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ numpy==1.20.3
 pandas==1.2.4
 pymc3==3.11.2
 click==8.0.1
-cadCAD_tools==0.0.1.4
+cadCAD==0.4.18
+cadCAD_tools==0.0.1.5
 scikit_learn==0.24.2
 nbconvert==6.0.7
 ipython_autotime==0.2.0
