--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-tqdm==4.61.0
-requests==2.25.1
-papermill==2.3.3
-scipy==1.6.3
-statsmodels==0.12.2
-pytest==6.2.4
-numpy==1.20.3
-pandas==1.2.4
-pymc3==3.11.2
-click==8.0.1
+tqdm>=4.61.0
+requests>=2.25.1
+papermill>=2.3.3
+scipy>=1.6.3
+statsmodels>=0.12.2
+pytest>=6.2.4
+numpy>=1.20.3
+pandas>=1.2.4
+pymc3>=3.11.2
+click>=8.0.1
 cadCAD==0.4.18
 cadCAD_tools==0.0.1.5
-scikit_learn==0.24.2
-nbconvert==6.0.7
-ipython_autotime==0.2.0
-jupyterlab==3.0.16
-plotly==5.1.0
+scikit_learn>=0.24.2
+nbconvert>=6.0.7
+ipython_autotime>=0.2.0
+jupyterlab>=3.0.17
+plotly>=5.1.0
